--- a/site/resources/styles/core/core.less
+++ b/site/resources/styles/core/core.less
@@ -42,107 +42,137 @@ table
   border-spacing: 0;
   margin: 0;
   padding: 0;
-}
 
-table td,
-table th
-{
-  padding: 0;
-  text-align: left;
-}
+  td, th
+  {
+    padding: 0;
+    text-align: left;
+  }
 
-table td
-{
-  text-align: left
-}
+  th
+  {
+    font-weight: bold;
+    border-bottom: @hairline_border_width solid @bright_border
+  }
 
-table th
-{
-  font-weight: bold;
-  border-bottom: @hairline_border_width solid @bright_border
-}
+  td
+  {
+    > p:first-child,
+    > pre:first-child,
+    > ul:first-child
+    {
+      margin-top: 0;
+    }
 
-table td p:first-child,
-table td pre:first-child,
-table td ul:first-child
-{
-  margin-top: 0;
-}
+    > p:last-child,
+    > pre:last-child,
+    > ul:last-child
+    {
+      margin-bottom: 0;
+    }
+  }
 
-table td p:last-child,
-table td pre:last-child,
-table td ul:last-child
-{
-  margin-bottom: 0;
-}
+  &.basic
+  {
+    margin: @standard_spacing 0;
 
-table.basic
-{
-  margin: @standard_spacing 0;
-}
+    > tbody > tr
+    {
+      > td,
+      > th
+      {
+        padding: @cell_spacing @standard_spacing @cell_spacing @cell_spacing;
+        line-height: @compressed_text_flow_line_height;
 
-table.basic > tbody > tr > td,
-table.basic > tbody > tr > th
-{
-  padding: @cell_spacing @standard_spacing @cell_spacing @cell_spacing;
-  line-height: @compressed_text_flow_line_height;
-}
+        &:first-child
+        {
+          padding-left: 0;
+        }
 
-table.columns > tbody > tr > td,
-table.columns > tbody > tr > th
-{
-  padding: @cell_spacing @standard_spacing;
-  border-right: @hairline_border_width solid @bright_border;
-}
+        &:last-child
+        {
+          padding-right: 0;
+        }
+      }
 
-table.basic > tbody > tr:first-child > td,
-table.basic > tbody > tr:first-child > th
-{
-  padding-top: 0;
-}
+      &:first-child
+      {
+        > td,
+        > th
+        {
+          padding-top: 0;
+        }
+      }
 
-table.basic > tbody > tr:last-child > td,
-table.basic > tbody > tr:last-child > th
-{
-  padding-bottom: 0;
-}
+      &:last-child
+      {
+        > td,
+        > th
+        {
+          padding-bottom: 0;
+        }
+      }
+    }
+  }
 
-table.basic > tbody > tr > td:first-child,
-table.basic > tbody > tr > th:first-child
-{
-  padding-left: 0;
-}
+  &.columns
+  {
+    > tbody > tr
+    {
+      > td,
+      > th
+      {
+        padding: @cell_spacing @standard_spacing;
+        border-right: @hairline_border_width solid @bright_border;
 
-table.basic > tbody > tr > td:last-child,
-table.basic > tbody > tr > th:last-child
-{
-  padding-right: 0;
-}
+        &:last-child
+        {
+          border-right: none;
+        }
+      }
+    }
+  }
 
-table.columns> tbody > tr > td:last-child,
-table.columns > tbody > tr > th:last-child
-{
-  border-right: none;
-}
+  &.left-labels
+  {
+    > tbody > tr
+    {
+      > td,
+      > th
+      {
+        &:first-child
+        {
+          text-align: right;
+          white-space: nowrap;
+          border-bottom: none;
+        }
+      }
+    }
 
-table.left-labels > tbody > tr > td:first-child,
-table.left-labels > tbody > tr > th:first-child
-{
-  text-align: right;
-  white-space: nowrap;
-  border-bottom: none;
-}
+    &.top > tbody > tr
+    {
+      > td,
+      > th
+      {
+        &:first-child
+        {
+          vertical-align: baseline;
+        }
+      }
+    }
 
-table.left-labels.top > tbody > tr > td:first-child,
-table.left-labels.top > tbody > tr > th:first-child
-{
-  vertical-align: baseline;
-}
-
-table.left-labels.bottom > tbody > tr > td:first-child,
-table.left-labels.bottom > tbody > tr > th:first-child
-{
-  vertical-align: bottom;
+    &.bottom > tbody > tr
+    {
+      > td,
+      > th
+      {
+        &:first-child
+        {
+          vertical-align: bottom;
+        }
+      }
+    }
+  }
 }
 
 .text-flow table.basic > tbody > tr > td,
@@ -340,14 +370,17 @@ pre > code
   margin: -10px;
 }
 
-.icon-container .banner-title
+.icon-container
 {
-  margin-right: 65px;
-}
+  .banner-title
+  {
+    margin-right: 65px;
+  }
 
-.icon-container .login-status
-{
-  margin-right: 65px;
+  .login-status
+  {
+    margin-right: 65px;
+  }
 }
 
 .banner-icon
